# OrcaDolittle

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  README.md  ci.yml.pending  deploy_space.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
assets/: README.md
data/: README.md
data/embeddings/: aves2_embeddings.npz  aves2_metadata.json  aves2_pilot.npz  ecotype_test_embeddings.npz  encoding_progress.json
data/join_tables/: README.md  broadcast_response_evidence.csv  call_type_manifest.csv  call_type_to_context.csv  dtag_dive_context.csv  ferop_catalogue_manifest.csv  filatova2011_playback_trials.csv  source_file_table.csv  wellard_encounter_context.csv
data/playback/: ferop_catalogue_embeddings.npz
docs/: ai_architecture.md  artifact_provenance.md  benchmarks.md  cetacean_datasets_audit.md  data.md  data_availability.md  data_requests.md  dataset_plan.md  decode_context_plan.md  decoding_program.md  deploy.md  evidence_mapping.md  h3_headline_pivot.md  h3_implementation.md  limitations_and_mitigations.md  literature_review.md  local_environment_manifest.md  methodology.md  playback_corpus.md  prize_criteria_mapping.md  refs.bib  results_analysis.md
examples/: 01_minimal_perceive.py  02_off_policy_eval.py
figures/: calltype_discovery_srkw.json  calltype_discovery_srkw_single.json  h1_metrics_aves2_full_labeled.json  h2_metrics_aves2_full_labeled.json  h3_metrics_aves2_full_labeled.json  h4_metrics_aves2_full_labeled.json  sequence_structure_aves2_full_labeled.json
notebooks/: README.md  _build_dtag_nb.py  _build_naturelm_nb.py  calltype_encode_colab.ipynb  dtag_context_decode_colab.ipynb  naturelm_audio_comparison_colab.ipynb  naturelm_audio_comparison_colab_v2.ipynb
orcadolittle/: __init__.py  config.py
orcadolittle/benchmarks/: __init__.py  generate_eval.py  perceive_eval.py  predict_eval.py  run_all.py  select_eval.py
orcadolittle/cli/: __init__.py  main.py
orcadolittle/core/: __init__.py  generate.py  perceive.py  pipeline.py  predict.py  select.py
orcadolittle/data/: __init__.py  context_mapping.py  dclde.py  orcasound.py  playback_corpus.py  transforms.py
orcadolittle/docker/: Dockerfile  entrypoint.sh
orcadolittle/models/: __init__.py  encoders.py  generative.py  policy.py
orcadolittle/utils/: __init__.py  audio.py  viz.py
paper/: coordinator_email_draft.md  manuscript.md  manuscript.tex  manuscript_condensed.tex  refs.bib  video_script.md
papers/: README.md
reports/: artifact_hashes.json  attribution_controls_summary.json  broadcast_response_criterion.json  broadcast_response_evidence.json  calltype_compositionality_summary.json  calltype_context_selectivity.json  calltype_context_specialization_summary.json  calltype_distributional_semantics_summary.json  calltype_manifest_summary.json  calltype_model_full_summary.json  calltype_model_summary.json  calltype_multicontext_summary.json  calltype_sequence_summary.json  context3_decode_summary.json  context3_label_yield.json  context_controls_summary.json  context_decode_summary.json  context_label_yield.json  corpus_freeze.json  dclde_calltype_survey.json  dtag_context_power.json  encoding_shard_report.json  environment_snapshot.json  h_command_metadata.json  label_audit.json  naturelm_analysis_readout.json  naturelm_analysis_readout.md  naturelm_calltype_manifest_resolved.csv  naturelm_calltype_model_summary.json  naturelm_environment.json  naturelm_model_manifest.json  naturelm_package_manifest.json  naturelm_playback_embedding_summary.json  pip_freeze.txt  playback_embedding_summary.json  playback_response_summary.json  repro_bundle.json  results_summary.json  run_state.json  site_invariance_summary.json
scripts/: add_labels_from_metadata.py  audit_corpus_labels.py  batch_encode.py  batch_encode_streaming.py  build_calltype_manifest.py  build_playback_manifest.py  build_validation_evidence_tables.py  build_wellard_evidence_tables.py  build_wellard_segment_features.py  download_annotations.py  download_sample_audio.py  dtag_calltype_context.py  dtag_context_controls.py  dtag_context_decode.py  dtag_context_labels.py  dtag_context_multidecode.py  dtag_context_multilabel.py  dtag_local_extract.py  dtag_movement_states.py  ecotype_separation_test.py  fetch_orcasound_labels.py  freeze_corpus.py  hello_world.py  make_repro_bundle.py  organize_wellard_drive_colab.py  plot_h4_summary.py  run_attribution_controls.py  run_calltype_compositionality.py  run_calltype_context_specialization.py  run_calltype_discovery.py  run_calltype_distributional_semantics.py  run_calltype_model.py  run_calltype_multicontext.py  run_calltype_sequence.py  run_h1_probes.py  run_h2_clustering.py  run_h3_pilot.py  run_h3_sequence_lm.py  run_h4_confound.py  run_h5_behavior_context.py  (+8 more)
site/: dictionary.html  index.html
src/orca_acoustics/: __init__.py
src/orcadolittle/: __init__.py  cli.py
src/orcadolittle/data/: __init__.py  call_streams.py  dclde_loader.py  synthetic.py
src/orcadolittle/eval/: __init__.py  permutation.py
tests/: conftest.py  test_claim_boundaries.py  test_data.py  test_generate.py  test_model.py  test_perceive.py  test_permutation.py  test_pipeline.py  test_predict.py  test_select.py  test_train.py
web/: __init__.py  app.py  theme.py
(+4 files in other folders)
