[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orcadolittle"
version = "0.1.0"
description = "Head H3 of the OrcaDolittle submission: per-encounter Transformer MLM over killer-whale call-ID sequences. See docs/ai_architecture.md."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Danielle Lesin" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
data = ["pandas>=2.0"]

[project.scripts]
orca-h3-pilot = "orcadolittle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
