[project]
name = "orcadolittle"
version = "0.1.0"
description = "Killer-whale bioacoustic analysis with frozen audio foundation-model embeddings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Danielle Lesin"}
]

dependencies = [
    "avex>=1.1.0",
    "numpy>=1.26.4",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "librosa>=0.10.0",
    "soundfile>=0.13.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "gcsfs>=2024.10.0",
]

[project.optional-dependencies]
analysis = [
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "joblib>=1.3.0",
]
gpu = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
